working on front end

--- a/web/html/interface.html
+++ b/web/html/interface.html
@@ -3,10 +3,23 @@
     <head>
         <title>Falling Knives Capstone</title>
         <meta charset="utf-8">
+        <style>
+            h1 {
+                text-align: center;
+                color: white;
+            }
+            body {
+                background-image: url('stock market.jpg');
+                background-repeat: no-repeat;
+                background-size: cover;
+                color: white;
+            }
+        </style>
     </head>
 
     <body>
         <h1>Falling Knives Capstone</h1>
+        <p>Welcome to the user interface for the Falling Knives Capstone project. This interface allows you to calculate which stocks are falling knives based on your inputs.</p>
         <p>Please enter the start date, end date, and percent change.</p>
         <form action="/action_page.php">
             <label for="sdate">Start date:</label>
