working on frontend

--- a/web/index.html
+++ b/web/index.html
@@ -18,6 +18,7 @@
     </head>
 
     <body>
+        <script src="app.js"></script>
         <h1>Falling Knives Capstone</h1>
         <p>Welcome to the user interface for the Falling Knives Capstone project. This interface allows you to calculate which stocks are falling knives based on your inputs.</p>
         <p>Please enter the start date, end date, and percent change.</p>
