--- a/web/index.html
+++ b/web/index.html
@@ -21,7 +21,7 @@
         <h1>Falling Knives Capstone</h1>
         <p>Welcome to the user interface for the Falling Knives Capstone project. This interface allows you to calculate which stocks are falling knives based on your inputs.</p>
         <p>Please enter the start date, end date, and percent change.</p>
-        <script>
+        <!-- <script>
             function myFunc()
             {
                 var sDate = document.getElementById("sdate");
@@ -49,8 +49,8 @@
                     console.log(response);
                 }
             }
-            </script>
-        <form onsubmit="myFunc()">
+            </script> -->
+        <form name="fallingknivesform" method="post" action="fallingknives">
             <label for="sdate">Start date (yyyy-mm-dd):</label>
             <input type="text" id="sdate" name="sdate"><br><br>
             <label for="edate">End date (yyyy-mm-dd):</label>
