--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <h1>Falling Knives Capstone</h1>
-    <p>Welcome to the user interface for the Falling Knives Capstone project. This interface allows you to determine how well a certain stock is doing compared to stocks that fell by a certain percentage.</p>
+    <p>Welcome to the user interface for the Falling Knives Capstone project. This interface allows you to determine how well a certain stock is doing compared to stocks that fell by a certain percentage within a given period.</p>
         <p>Please enter the ticker, time period, and percent change.</p>
     <form action="App" method="post">
         <label for="sdate">Ticker: </label>
