--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,7 +9,7 @@
             color: white;
         }
         html {
-            background-image: url('stock market.jpg');
+            background-image: url('g.foolcdn.jpg');
             background-repeat: no-repeat;
             background-size: cover;
         }
@@ -21,7 +21,7 @@
 <body>
     <h1>Falling Knives Capstone</h1>
     <p>Welcome to the user interface for the Falling Knives Capstone project. This interface allows you to determine how well a certain stock is doing compared to stocks that fell by a certain percentage within a given period.</p>
-        <p>Please enter the ticker, time period, and percent change.</p>
+    <p>Please enter a ticker, time period, and percent change.</p>
     <form action="App" method="post">
         <label for="sdate">Ticker: </label>
         <input type="text" name="sdate" id="sdate">
